qtvirtualkeyboard-opensource-src (5.11.2+dfsg-2) UNRELEASED; urgency=medium


 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 10 Oct 2018 17:36:03 +0300

qtvirtualkeyboard-opensource-src (5.11.2+dfsg-1) experimental; urgency=medium

  * New upstream release.
  * Refresh disable_tcime_and_pinyin_from_lang_all.patch.
  * Fix test_wclAutoCommitWordSetting instead of disabling it.
  * Set LIPI_ROOT and LIPI_LIB when running the tests.
  * Make tests failures fatal on little endian architectures.
  * Move qml-module-qtquick-virtualkeyboard from section libdevel to libs.
  * Bump Qt build-dependencies to 5.11.2.
  * Use HTTPS for the Homepage field.
  * Update debian/copyright.
  * Bump Standards-Version to 4.2.1, no changes needed.

 -- Dmitry Shachnev <mitya57@debian.org>  Mon, 01 Oct 2018 11:13:29 +0300

qtvirtualkeyboard-opensource-src (5.11.1+dfsg-2) unstable; urgency=medium

  * Upload to Sid.

 -- Simon Quigley <tsimonq2@ubuntu.com>  Wed, 25 Jul 2018 04:49:32 -0500

qtvirtualkeyboard-opensource-src (5.11.1+dfsg-1) experimental; urgency=medium

  * New upstream release.
  * Bump Standards-version to 4.1.4, no changes needed.
  * Bump build dependencies to 5.11.1.
  * Update the copyright file for the new upstream release.

 -- Simon Quigley <tsimonq2@ubuntu.com>  Mon, 25 Jun 2018 23:50:59 -0500

qtvirtualkeyboard-opensource-src (5.10.1+dfsg-5) unstable; urgency=medium

  [ Simon Quigley ]
  * Add my name to Uploaders.

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Disable the experimental arrow keys navigation: it avoids using Enter to
    confirm the password on SDDM. Thanks Rik Mills for the pointer.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Mon, 16 Apr 2018 15:02:10 -0300

qtvirtualkeyboard-opensource-src (5.10.1+dfsg-4) unstable; urgency=medium

  * Release to unstable.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Sat, 07 Apr 2018 20:56:59 -0300
