@@ -1,5 +1,7 @@
 qtvirtualkeyboard-opensource-src (5.11.2+dfsg-2) UNRELEASED; urgency=medium
 
+  [ Dmitry Shachnev ]
+  * Make the tests non-fatal everywhere, there are too many bugs.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 10 Oct 2018 17:36:03 +0300
 
